# GENREG-sine

./: .gitignore  CLAUDE.md  README.md  SKLEARN_RESULTS.md  SUMMARY_Ultra_Sparse_Evolvable_Networks.md  TODO.md  dashboard.py  experiment_pruning.py  experiment_robustness.py  experiment_sepcmaes.py  experiments_log.md  pyproject.toml  run_experiment.py  sine_annealing.py  sine_cmaes.py  sine_config.py  sine_controller.py  sine_genome.py  sine_train.py  sine_visualize.py  test_checkpoint.py
core/: __init__.py  augmentation.py  metrics.py  models.py  training.py
docs/: SKLEARN_RESULTS.md  TODO.md  experiments_log.md
experiments/: __init__.py  ablation_study.py  arch_search.py  backprop_sparse.py  binary_variablek.py  comprehensive_benchmark.py  constraint_boundary.py  covariate_shift.py  covariate_shift_digits.py  demo_dashboard.py  digits_baselines.py  digits_seeds.py  digits_sweep.py  evolvable_connectivity.py  experiment_clean_noise.py  experiment_efficiency_fitness.py  experiment_filtered_noise.py  experiment_hybrid.py  experiment_inference.py  experiment_pruning.py  experiment_robustness.py  experiment_sepcmaes.py  experiment_true_noise.py  extended_training.py  extreme_sparsity.py  friedman1_comparison.py  full_method_comparison.py  gsa_ablation.py  gsa_ablation_suite.py  gsa_augmented.py  gsa_deep.py  gsa_digits.py  gsa_dims_sweep.py  gsa_sine_saturation.py  highdim_gsa.py  highdim_gsa_v2.py  highdim_scaling.py  hybrid_arch.py  inference_benchmark.py  inference_engines.py  (+11 more)
legacy/: README.md  __init__.py  compression_test.py  sine_analyze.py  sine_annealing.py  (+9 more)
(+124 files in other folders)
